<resources>
    <string name="app_name">Android Character Creator</string>
    <string name="action_settings">Settings</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_create">Create</string>
    <string name="attr_str">STR</string>
    <string name="attr_con">CON</string>
    <string name="attr_siz">SIZ</string>
    <string name="attr_dex">DEX</string>
    <string name="attr_int">INT</string>
    <string name="attr_ken">KEN</string>
    <string name="attr_cha">CHA</string>
</resources>
