<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dugsolutions.ccand.act.DetailsActivity"
    tools:showIn="@layout/details_activity">

    <TextView
        android:id="@+id/frame_title"
        style="@style/FrameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_title">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/str_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_str" />

            <TextView
                android:id="@+id/str_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11" />

            <TextView
                android:id="@+id/con_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_spacing"
                android:text="@string/attr_con" />

            <TextView
                android:id="@+id/con_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11" />

            <TextView
                android:id="@+id/siz_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_spacing"
                android:text="@string/attr_siz" />

            <TextView
                android:id="@+id/siz_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/details_attr_v_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1">

            <TextView
                android:id="@+id/dex_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attr_dex"/>

            <TextView
                android:id="@+id/dex_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11"/>

            <TextView
                android:id="@+id/int_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_spacing"
                android:text="@string/attr_int"/>

            <TextView
                android:id="@+id/int_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11"/>

            <TextView
                android:id="@+id/ken_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_spacing"
                android:text="@string/attr_ken"/>

            <TextView
                android:id="@+id/ken_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11"/>

            <TextView
                android:id="@+id/cha_label"
                style="@style/DetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_spacing"
                android:text="@string/attr_cha"/>

            <TextView
                android:id="@+id/cha_value"
                style="@style/DetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_attr_gap"
                android:text="11"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
