<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_chars"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/str_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/str_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_str"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"
            app:layout_constraintTop_toTopOf="@id/str_value"
            app:layout_constraintRight_toLeftOf="@id/str_value"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/con_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/str_value"
            app:layout_constraintLeft_toLeftOf="@id/str_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/con_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_con"
            app:layout_constraintTop_toTopOf="@id/con_value"
            app:layout_constraintRight_toLeftOf="@id/con_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/siz_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/con_value"
            app:layout_constraintLeft_toLeftOf="@id/con_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/siz_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_siz"
            app:layout_constraintTop_toTopOf="@id/siz_value"
            app:layout_constraintRight_toLeftOf="@id/siz_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/dex_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/siz_value"
            app:layout_constraintLeft_toLeftOf="@id/siz_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/dex_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_dex"
            app:layout_constraintTop_toTopOf="@id/dex_value"
            app:layout_constraintRight_toLeftOf="@id/dex_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/int_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/dex_value"
            app:layout_constraintLeft_toLeftOf="@id/dex_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/int_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_int"
            app:layout_constraintTop_toTopOf="@id/int_value"
            app:layout_constraintRight_toLeftOf="@id/int_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/ken_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/int_value"
            app:layout_constraintLeft_toLeftOf="@id/int_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/ken_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_ken"
            app:layout_constraintTop_toTopOf="@id/ken_value"
            app:layout_constraintRight_toLeftOf="@id/ken_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/cha_value"
            android:layout_width="@dimen/attr_value_width"
            android:layout_height="@dimen/attr_value_height"
            app:layout_constraintTop_toBottomOf="@id/ken_value"
            app:layout_constraintLeft_toLeftOf="@id/ken_value"
            android:layout_marginTop="@dimen/attr_margin_top_spacing"
            numberpicker:min="3"
            numberpicker:max="18"
            numberpicker:value="11"
            numberpicker:unit="1"/>

        <TextView
            android:id="@+id/cha_label"
            android:layout_width="@dimen/attr_label_width"
            android:layout_height="wrap_content"
            style="@style/AttrLabel"
            android:text="@string/attr_cha"
            app:layout_constraintTop_toTopOf="@id/cha_value"
            app:layout_constraintRight_toLeftOf="@id/cha_value"
            android:layout_marginTop="@dimen/attr_margin_top_adjust"
            android:layout_marginRight="@dimen/attr_margin_right"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
